added InMemoeryQueue implementation